--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,59 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+asttokens==2.4.1
+beautifulsoup4==4.12.3
 certifi==2024.8.30
+charset-normalizer==3.4.0
+contourpy==1.3.0
+cycler==0.12.1
+decorator==5.1.1
 distro==1.9.0
 exceptiongroup==1.2.2
+executing==2.1.0
+fonttools==4.54.1
+frozendict==2.4.6
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
+ipython==8.28.0
+jedi==0.19.1
 jiter==0.6.1
+kiwisolver==1.4.7
+lxml==5.3.0
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+multitasking==0.0.11
+numpy==2.1.2
 openai==1.52.2
+packaging==24.1
+pandas==2.2.3
+parso==0.8.4
+peewee==3.17.7
+pexpect==4.9.0
+pillow==11.0.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pydantic==2.9.2
 pydantic_core==2.23.4
+Pygments==2.18.0
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
+requests==2.32.3
+six==1.16.0
 sniffio==1.3.1
+soupsieve==2.6
+stack-data==0.6.3
 tqdm==4.66.5
+traitlets==5.14.3
 typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+wcwidth==0.2.13
+webencodings==0.5.1
+yfinance==0.2.46
