--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asttokens==2.4.1
 beautifulsoup4==4.12.3
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
 contourpy==1.3.0
 cycler==0.12.1
 decorator==5.1.1
@@ -12,6 +13,7 @@ exceptiongroup==1.2.2
 executing==2.1.0
 fonttools==4.54.1
 frozendict==2.4.6
+gTTS==2.5.3
 h11==0.14.0
 html5lib==1.1
 httpcore==1.0.6
@@ -34,12 +36,16 @@ peewee==3.17.7
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
+playsound==1.3.0
 prompt_toolkit==3.0.48
 ptyprocess==0.7.0
 pure_eval==0.2.3
+PyAudio==0.2.14
+pycairo==1.27.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+PyGObject==3.50.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -48,6 +54,7 @@ requests==2.32.3
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
+SpeechRecognition==3.11.0
 stack-data==0.6.3
 tqdm==4.66.5
 traitlets==5.14.3
