--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.6.2.post1
 asttokens==2.4.1
 beautifulsoup4==4.12.3
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 contourpy==1.3.0
@@ -42,6 +43,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 PyAudio==0.2.14
 pycairo==1.27.0
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
@@ -55,12 +57,15 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 SpeechRecognition==3.11.0
+srt==3.5.3
 stack-data==0.6.3
 tqdm==4.66.5
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+vosk==0.3.45
 wcwidth==0.2.13
 webencodings==0.5.1
+websockets==13.1
 yfinance==0.2.46
