--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
 asttokens==2.4.1
+attrs==24.2.0
 beautifulsoup4==4.12.3
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
+coloredlogs==15.0.1
 contourpy==1.3.0
 cycler==0.12.1
 decorator==5.1.1
 distro==1.9.0
 exceptiongroup==1.2.2
 executing==2.1.0
+flatbuffers==24.3.25
 fonttools==4.54.1
 frozendict==2.4.6
 gTTS==2.5.3
@@ -19,17 +22,28 @@ h11==0.14.0
 html5lib==1.1
 httpcore==1.0.6
 httpx==0.27.2
+humanfriendly==10.0
 idna==3.10
+imageio==2.36.0
 ipython==8.28.0
 jedi==0.19.1
 jiter==0.6.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 kiwisolver==1.4.7
+lazy_loader==0.4
+llvmlite==0.43.0
 lxml==5.3.0
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
+mpmath==1.3.0
 multitasking==0.0.11
-numpy==2.1.2
+networkx==3.4.2
+numba==0.60.0
+numpy==2.0.2
+onnxruntime==1.19.2
 openai==1.52.2
+opencv-python-headless==4.10.0.84
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -38,7 +52,9 @@ pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
 playsound==1.3.0
+pooch==1.8.2
 prompt_toolkit==3.0.48
+protobuf==5.28.3
 ptyprocess==0.7.0
 pure_eval==0.2.3
 PyAudio==0.2.14
@@ -48,17 +64,25 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
 PyGObject==3.50.0
+PyMatting==1.1.12
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+referencing==0.35.1
+rembg==2.0.59
 requests==2.32.3
+rpds-py==0.20.0
+scikit-image==0.24.0
+scipy==1.14.1
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 SpeechRecognition==3.11.0
 srt==3.5.3
 stack-data==0.6.3
+sympy==1.13.3
+tifffile==2024.9.20
 tqdm==4.66.5
 traitlets==5.14.3
 typing_extensions==4.12.2
