--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+altair==5.4.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 asttokens==2.4.1
 attrs==24.2.0
 beautifulsoup4==4.12.3
+blinker==1.8.2
+cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
@@ -17,6 +20,8 @@ executing==2.1.0
 flatbuffers==24.3.25
 fonttools==4.54.1
 frozendict==2.4.6
+gitdb==4.0.11
+GitPython==3.1.43
 gTTS==2.5.3
 h11==0.14.0
 html5lib==1.1
@@ -27,6 +32,7 @@ idna==3.10
 imageio==2.36.0
 ipython==8.28.0
 jedi==0.19.1
+Jinja2==3.1.4
 jiter==0.6.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
@@ -34,10 +40,14 @@ kiwisolver==1.4.7
 lazy_loader==0.4
 llvmlite==0.43.0
 lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mpmath==1.3.0
 multitasking==0.0.11
+narwhals==1.10.0
 networkx==3.4.2
 numba==0.60.0
 numpy==2.0.2
@@ -49,7 +59,7 @@ pandas==2.2.3
 parso==0.8.4
 peewee==3.17.7
 pexpect==4.9.0
-pillow==11.0.0
+pillow==10.4.0
 platformdirs==4.3.6
 playsound==1.3.0
 pooch==1.8.2
@@ -57,11 +67,13 @@ prompt_toolkit==3.0.48
 protobuf==5.28.3
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==17.0.0
 PyAudio==0.2.14
 pycairo==1.27.0
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
+pydeck==0.9.1
 Pygments==2.18.0
 PyGObject==3.50.0
 PyMatting==1.1.12
@@ -72,23 +84,30 @@ pytz==2024.2
 referencing==0.35.1
 rembg==2.0.59
 requests==2.32.3
+rich==13.9.3
 rpds-py==0.20.0
 scikit-image==0.24.0
 scipy==1.14.1
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
 SpeechRecognition==3.11.0
 srt==3.5.3
 stack-data==0.6.3
+streamlit==1.39.0
 sympy==1.13.3
+tenacity==9.0.0
 tifffile==2024.9.20
+toml==0.10.2
+tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 vosk==0.3.45
+watchdog==5.0.3
 wcwidth==0.2.13
 webencodings==0.5.1
 websockets==13.1
