--- a/requirements.txt
+++ b/requirements.txt
@@ -34,9 +34,14 @@ ipython==8.28.0
 jedi==0.19.1
 Jinja2==3.1.4
 jiter==0.6.1
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kiwisolver==1.4.7
+langchain-core==0.3.12
+langchain-openai==0.2.3
+langsmith==0.1.137
 lazy_loader==0.4
 llvmlite==0.43.0
 lxml==5.3.0
@@ -54,6 +59,7 @@ numpy==2.0.2
 onnxruntime==1.19.2
 openai==1.52.2
 opencv-python-headless==4.10.0.84
+orjson==3.10.10
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -81,9 +87,12 @@ pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+PyYAML==6.0.2
 referencing==0.35.1
+regex==2024.9.11
 rembg==2.0.59
 requests==2.32.3
+requests-toolbelt==1.0.0
 rich==13.9.3
 rpds-py==0.20.0
 scikit-image==0.24.0
@@ -99,6 +108,7 @@ streamlit==1.39.0
 sympy==1.13.3
 tenacity==9.0.0
 tifffile==2024.9.20
+tiktoken==0.8.0
 toml==0.10.2
 tornado==6.4.1
 tqdm==4.66.5
