--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asttokens==2.4.1
 attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
+branca==0.8.0
 cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
@@ -18,6 +19,7 @@ distro==1.9.0
 exceptiongroup==1.2.2
 executing==2.1.0
 flatbuffers==24.3.25
+folium==0.18.0
 fonttools==4.54.1
 frozendict==2.4.6
 gitdb==4.0.11
@@ -105,6 +107,7 @@ SpeechRecognition==3.11.0
 srt==3.5.3
 stack-data==0.6.3
 streamlit==1.39.0
+streamlit_folium==0.23.1
 sympy==1.13.3
 tenacity==9.0.0
 tifffile==2024.9.20
@@ -121,4 +124,5 @@ watchdog==5.0.3
 wcwidth==0.2.13
 webencodings==0.5.1
 websockets==13.1
+xyzservices==2024.9.0
 yfinance==0.2.46
