--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,20 @@ cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+ci-info==0.3.0
 click==8.1.7
 coloredlogs==15.0.1
+configobj==5.0.9
+configparser==7.1.0
 contourpy==1.3.0
 cycler==0.12.1
 decorator==5.1.1
 distro==1.9.0
+etelemetry==0.3.1
 exceptiongroup==1.2.2
 executing==2.1.0
+filelock==3.16.1
+fitz==0.0.1.dev2
 flatbuffers==24.3.25
 folium==0.18.0
 fonttools==4.54.1
@@ -28,11 +34,14 @@ gTTS==2.5.3
 h11==0.14.0
 html5lib==1.1
 httpcore==1.0.6
+httplib2==0.22.0
 httpx==0.27.2
 humanfriendly==10.0
 idna==3.10
 imageio==2.36.0
+importlib_resources==6.4.5
 ipython==8.28.0
+isodate==0.6.1
 jedi==0.19.1
 Jinja2==3.1.4
 jiter==0.6.1
@@ -46,6 +55,7 @@ langchain-openai==0.2.3
 langsmith==0.1.137
 lazy_loader==0.4
 llvmlite==0.43.0
+looseversion==1.3.0
 lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -56,8 +66,10 @@ mpmath==1.3.0
 multitasking==0.0.11
 narwhals==1.10.0
 networkx==3.4.2
+nibabel==5.3.2
+nipype==1.9.0
 numba==0.60.0
-numpy==2.0.2
+numpy==1.26.4
 onnxruntime==1.19.2
 openai==1.52.2
 opencv-python-headless==4.10.0.84
@@ -65,6 +77,8 @@ orjson==3.10.10
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
+pathlib==1.0.1
+pdf2image==1.17.0
 peewee==3.17.7
 pexpect==4.9.0
 pillow==10.4.0
@@ -73,8 +87,10 @@ playsound==1.3.0
 pooch==1.8.2
 prompt_toolkit==3.0.48
 protobuf==5.28.3
+prov==2.0.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
+puremagic==1.28
 pyarrow==17.0.0
 PyAudio==0.2.14
 pycairo==1.27.0
@@ -82,14 +98,19 @@ pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
+pydot==3.0.2
+pygame==2.6.1
 Pygments==2.18.0
 PyGObject==3.50.0
 PyMatting==1.1.12
+PyMuPDF==1.24.13
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+pyxnat==1.6.2
 PyYAML==6.0.2
+rdflib==6.3.2
 referencing==0.35.1
 regex==2024.9.11
 rembg==2.0.59
@@ -99,6 +120,7 @@ rich==13.9.3
 rpds-py==0.20.0
 scikit-image==0.24.0
 scipy==1.14.1
+simplejson==3.19.3
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
@@ -116,6 +138,7 @@ toml==0.10.2
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
+traits==6.4.3
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
