--- a/requirements.txt
+++ b/requirements.txt
@@ -83,7 +83,7 @@ peewee==3.17.7
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.3.6
-playsound==1.3.0
+# playsound==1.3.0
 pooch==1.8.2
 prompt_toolkit==3.0.48
 protobuf==5.28.3
